--- a/style.css
+++ b/style.css
@@ -15,11 +15,52 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 85vh;
     width: 100%;
     box-sizing: border-box;
     position: relative;
     z-index: 2;
+}
+
+/* Tech Box */
+.tech-box {
+    background: rgba(112, 128, 144, 0.35); /* Semi-transparent background */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+/* Contact Box */
+.contact-box {
+    background: rgba(112, 128, 144, 0.35); /* Semi-transparent background */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+/* Contact Icons */
+.contact-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.contact-icons img {
+    width: 40px; /* Adjust the size of the icons as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
+/* Hyperlinks */
+a {
+    color: #00bfff; /* Light blue color for hyperlinks */
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 /* Menu Box */
@@ -146,7 +187,7 @@ body {
 }
 
 .project-info a {
-    color: #00f;
+    color: #00bfff; /* Light blue color for hyperlinks */
     text-decoration: none;
 }
 
@@ -154,9 +195,29 @@ body {
     text-decoration: underline;
 }
 
+#tech-stack {
+    text-align: center;
+    color: #fff; /* Adjust text color for better visibility */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Add shadow to text */
+}
+
+.tech-icons {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* Five icons per row */
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.tech-icons img {
+    width: 100px; /* Adjust the size of the icons as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
 /* Footer Styling */
 footer {
-    background: #333;
+    background: #000000;
     color: white;
     text-align: center;
     padding: 20px;
