--- a/style.css
+++ b/style.css
@@ -309,3 +309,55 @@ canvas#starfield {
     50% { transform: translate(-100vw, -100vh); }
     100% { transform: translate(0, 0); }
 }
+
+/* Mobile particularly, should be fine? */
+@media (max-width: 600px) {
+    .menu-box {
+        width: 90%;
+        max-width: none;
+    }
+
+    #menu .container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    #menu .profile-pic {
+        width: 100px;
+        height: 100px;
+    }
+
+    .menu-box .button-container button {
+        font-size: 14px;
+        padding: 8px 14px;
+    }
+
+    .projects-box {
+        width: 90%;
+    }
+
+    .project {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .project-img {
+        width: 100%;
+        height: auto;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    /* icons on mobile are visible 3 apart */
+    .tech-icons {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .tech-icons img {
+        width: 60px;
+    }
+
+    .content-box {
+        width: 85%;
+    }
+}
